# Laminar

./: .env.example  .gitignore  LICENSE  README.md  business_process.py  credentials.py  main.py  mermaid.py  pyproject.toml  run-dev.ps1  run-dev.sh  sample.json  ui.py
docker/: Dockerfile  convert.py  entrypoint.sh  policy.xml  process.sh
src/laminar/: __init__.py  cli.py  config.py
src/laminar/core/: __init__.py  constants.py  models.py  template.py
src/laminar/services/: __init__.py  ai_analyzer.py  excel_processor.py  mermaid_generator.py  process_extractor.py  template_parser.py
src/laminar/ui/: app.py
src/laminar/utils/: __init__.py  docker.py  image.py  logging.py
tests/: __init__.py  test_core.py  test_mermaid.py  test_template.py
